python/testData/quickFixes/PyAddImportQuickFixTest/orderingOfNamesInFromImportInTheMiddle/main.py
from lib import a, c

print(a, <error descr="Unresolved reference 'b'"><caret>b</error>, c)
